# xzutils

./: LICENSE  README.md  main.py  pyproject.toml
tests/: __init__.py  test_core.py  test_message.py
xzutils/: __init__.py  core.py
xzutils/message/: __init__.py  slackMessage.py
