[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "xzutils"
version = "0.1.1"
description = "A versatile Python utility toolkit"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = ["utilities", "tools", "toolkit"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
# 基础包不包含任何外部依赖
dependencies = []

[project.optional-dependencies]
# 消息功能需要requests
message = [
    "requests>=2.25.0",
]
# 开发依赖
dev = [
    "pytest>=7.0",
    "black>=22.0",
    "flake8>=5.0",
    "mypy>=1.0",
    "requests>=2.25.0",  # 开发时包含所有依赖
]
# 安装所有功能
all = [
    "requests>=2.25.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/xzutils"
Repository = "https://github.com/yourusername/xzutils"
Issues = "https://github.com/yourusername/xzutils/issues"

[project.scripts]
xzutils = "xzutils.core:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["xzutils*"]
exclude = ["tests*"]
